--- a/second.html
+++ b/second.html
@@ -33,7 +33,17 @@
 		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
 			<div class="wrap-login100 p-t-30 p-b-50">
 				<span class="login100-form-title p-b-41">
-					Поздравление 
+					Ровно 18 лет назад ты появилась на этом свете. 
+					Такая восхитительная, изящная, безподобная, талантливая, очаровывающая и сводящая с ума одим лишь взглядом.
+					Безумно благодарю судьбу за то, что она свела нас вместе, пусть даже не так надолго как этого хотелось.
+					Хочу пожелать тебе никогда не печалиться и не расстраиваться по пустякам, всегда знать и помнить, что 
+					ты фотогенична и прекрасно выглядишь на снимках, чтобы преподаватели больше не требовали без предупреждения включать камеру, 
+					и чтобы Персик любил принимать ванную.  
+
+				</span>
+				
+				<span class="login100-form-title p-b-11">
+					С твоим днем. 
 				</span>
 				
 			</div>
