--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 					
 
-					<div class="wrap-input100 validate-input" data-validate="Что то не то">
+					<div class="wrap-input100 validate-input" data-validate="Что-то не то">
 						<input class="input100" type="password" name="pass" placeholder="Название">
 						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
 					</div>
