--- a/second.html
+++ b/second.html
@@ -35,7 +35,7 @@
 				<span class="login100-form-title p-b-41">
 					Ровно 18 лет назад ты появилась на этом свете. 
 					Такая восхитительная, изящная, безподобная, талантливая, очаровывающая и сводящая с ума одим лишь взглядом.
-					Безумно благодарю судьбу за то, что она свела нас вместе, пусть даже не так надолго как этого хотелось.
+					Безумно благодарю судьбу за то, что она свела нас вместе, пусть даже не так надолго, как этого хотелось.
 					Хочу пожелать тебе никогда не печалиться и не расстраиваться по пустякам, всегда знать и помнить, что 
 					ты фотогенична и прекрасно выглядишь на снимках, чтобы преподаватели больше не требовали без предупреждения включать камеру, 
 					и чтобы Персик любил принимать ванную.  
@@ -43,9 +43,11 @@
 				</span>
 				
 				<span class="login100-form-title p-b-11">
-					С твоим днем. 
+					С твоим праздником. 
 				</span>
-				
+				<span class="login100-form-title p-b-11">
+					С днем рождения. 
+				</span>
 			</div>
 		</div>
 	</div>
