--- a/second.html
+++ b/second.html
@@ -33,12 +33,14 @@
 		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
 			<div class="wrap-login100 p-t-30 p-b-50">
 				<span class="login100-form-title p-b-41">
-					Ровно 18 лет назад ты появилась на этом свете. 
-					Такая восхитительная, изящная, безподобная, талантливая, очаровывающая и сводящая с ума одим лишь взглядом.
-					Безумно благодарю судьбу за то, что она свела нас вместе, пусть даже не так надолго, как этого хотелось.
-					Хочу пожелать тебе никогда не печалиться и не расстраиваться по пустякам, всегда знать и помнить, что 
-					ты фотогенична и прекрасно выглядишь на снимках, чтобы преподаватели больше не требовали без предупреждения включать камеру, 
-					и чтобы Персик любил принимать ванную.  
+					Моя дорогая, Диана, поздравляю тебя с этим чудесным праздником весны. 
+					Хочется пожелать тебе солнечного, радостного, весеннего настроения! 
+					Чтобы птички пели тебе песенки, душа наполнялась энергией приходящей весны, 
+					а сердце теплом и вдохновением!
+					Без тебя моя жизнь не была бы наполнена любвью и нежностью.
+					Пусть всегда найдется тот, кто захочет носить Вас на руках! 
+					
+	 
 
 				</span>
 				
