--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 					<div class="container-login100-form-btn m-t-32">
 						<button class="login100-form-btn">
-							Да, это он
+							Да, это оно
 						</button>
 					</div>
 
